--- a/templates/index.html
+++ b/templates/index.html
@@ -3,13 +3,12 @@
 
 <h1>Souvlaki Index</h1>
 
-
 <h1>Average Latest Prices</h1>
 
 <ul>
   {% for item in items %}
     <li>
-      <a href="/item/{{ item.item_name }}">
+      <a href="{{ url_for('item_page', item_slug=item.item_slug) }}">
         {{ item.item_name }}
       </a>
       — €{{ "%.2f"|format(item.avg_price_cents / 100) }}
